--- a/timerApp/Base.lproj/Main.storyboard
+++ b/timerApp/Base.lproj/Main.storyboard
@@ -95,29 +95,13 @@
                     <connections>
                         <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="MMW-no-D7N"/>
                         <segue destination="Geo-SS-bXf" kind="relationship" relationship="viewControllers" id="d6n-II-FK9"/>
-                        <segue destination="8gU-sW-daV" kind="relationship" relationship="viewControllers" id="drq-Bq-4xP"/>
+                        <segue destination="oHz-72-msE" kind="relationship" relationship="viewControllers" id="MU5-dU-GBm"/>
                         <segue destination="uXd-NQ-bb6" kind="relationship" relationship="viewControllers" id="8Ng-FG-fsD"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SjN-QI-UP4" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-391" y="-1906"/>
-        </scene>
-        <!--스톱워치-->
-        <scene sceneID="d6s-5e-9Rk">
-            <objects>
-                <viewController id="8gU-sW-daV" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="KwG-84-0mR">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <viewLayoutGuide key="safeArea" id="usH-2s-FL7"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="스톱워치" image="stopwatch" catalog="system" id="trq-30-67G"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="o9R-e4-Pqw" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="29" y="-1177"/>
         </scene>
         <!--카운트세트-->
         <scene sceneID="M9S-O1-NI8">
@@ -272,11 +256,77 @@
             </objects>
             <point key="canvasLocation" x="2257.971014492754" y="-1177.2321428571429"/>
         </scene>
+        <!--스톱워치-->
+        <scene sceneID="Tvn-Iq-tpx">
+            <objects>
+                <viewController id="oHz-72-msE" customClass="StopWatchController" customModule="timerApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Oez-xf-EUi">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00:00:00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xsq-vP-fnd">
+                                <rect key="frame" x="0.0" y="144" width="414" height="308"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="50"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="tTk-9c-jkk">
+                                <rect key="frame" x="0.0" y="552" width="414" height="261"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zu7-HB-eWw">
+                                        <rect key="frame" x="0.0" y="0.0" width="207" height="261"/>
+                                        <color key="backgroundColor" systemColor="systemRedColor"/>
+                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <state key="normal" image="resetIcon">
+                                            <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="50"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="didTouchReSet:" destination="oHz-72-msE" eventType="touchUpInside" id="6Of-6i-FFc"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="raf-TU-daO">
+                                        <rect key="frame" x="207" y="0.0" width="207" height="261"/>
+                                        <color key="backgroundColor" systemColor="systemGreenColor"/>
+                                        <state key="normal" image="playIcon">
+                                            <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="50"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="didTouchPlayorPause:" destination="oHz-72-msE" eventType="touchUpInside" id="l8q-5P-P3a"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="e2h-tR-6bS"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="xsq-vP-fnd" firstAttribute="centerX" secondItem="Oez-xf-EUi" secondAttribute="centerX" id="1uo-rs-TBZ"/>
+                            <constraint firstItem="tTk-9c-jkk" firstAttribute="top" secondItem="xsq-vP-fnd" secondAttribute="bottom" constant="100" id="H5S-Jh-4Q6"/>
+                            <constraint firstItem="xsq-vP-fnd" firstAttribute="leading" secondItem="e2h-tR-6bS" secondAttribute="leading" id="LsU-Az-rRr"/>
+                            <constraint firstItem="e2h-tR-6bS" firstAttribute="trailing" secondItem="xsq-vP-fnd" secondAttribute="trailing" id="VXd-1t-yaN"/>
+                            <constraint firstItem="e2h-tR-6bS" firstAttribute="trailing" secondItem="tTk-9c-jkk" secondAttribute="trailing" id="Wn4-AT-OSe"/>
+                            <constraint firstItem="xsq-vP-fnd" firstAttribute="top" secondItem="e2h-tR-6bS" secondAttribute="top" constant="100" id="kbD-Oj-KIc"/>
+                            <constraint firstItem="tTk-9c-jkk" firstAttribute="leading" secondItem="e2h-tR-6bS" secondAttribute="leading" id="nYK-EM-6X0"/>
+                            <constraint firstItem="e2h-tR-6bS" firstAttribute="bottom" secondItem="tTk-9c-jkk" secondAttribute="bottom" id="plx-51-32g"/>
+                            <constraint firstItem="xsq-vP-fnd" firstAttribute="centerY" secondItem="Oez-xf-EUi" secondAttribute="centerY" constant="-150" id="ykR-Nv-tHU"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="스톱워치" image="stopwatch" catalog="system" id="wp7-vs-v5d"/>
+                    <connections>
+                        <outlet property="playPauseButton" destination="raf-TU-daO" id="cGd-YN-Beg"/>
+                        <outlet property="timeLabel" destination="xsq-vP-fnd" id="t3s-oJ-Laa"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rKt-xm-rSZ" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="25" y="-1177"/>
+        </scene>
     </scenes>
     <resources>
         <image name="clear" catalog="system" width="128" height="114"/>
         <image name="gearshape" catalog="system" width="128" height="121"/>
         <image name="playIcon" width="100" height="100"/>
+        <image name="resetIcon" width="100" height="100"/>
         <image name="stopwatch" catalog="system" width="121" height="128"/>
         <image name="timer" catalog="system" width="128" height="121"/>
         <image name="timer.square" catalog="system" width="128" height="114"/>
