--- a/timerApp/Base.lproj/Main.storyboard
+++ b/timerApp/Base.lproj/Main.storyboard
@@ -313,6 +313,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="1단계" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dpm-YG-tz5">
+                                <rect key="frame" x="0.0" y="188" width="414" height="42"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00:00:00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oyh-Fu-Axr">
                                 <rect key="frame" x="0.0" y="188" width="414" height="220"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="50"/>
@@ -329,6 +335,9 @@
                                         <state key="normal" image="resetIcon">
                                             <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="50"/>
                                         </state>
+                                        <connections>
+                                            <action selector="didTouchReSet:" destination="b7b-Vo-GP4" eventType="touchUpInside" id="Qew-L3-fDR"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1ZE-qu-hx9">
                                         <rect key="frame" x="207" y="0.0" width="207" height="305"/>
@@ -336,6 +345,9 @@
                                         <state key="normal" image="playIcon">
                                             <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="50"/>
                                         </state>
+                                        <connections>
+                                            <action selector="didTouchPlayorPause:" destination="b7b-Vo-GP4" eventType="touchUpInside" id="Ucz-51-hSD"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                             </stackView>
@@ -346,6 +358,7 @@
                                     <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="50"/>
                                 </state>
                                 <connections>
+                                    <action selector="contDownListSet:" destination="b7b-Vo-GP4" eventType="touchUpInside" id="DCy-fA-OvJ"/>
                                     <segue destination="H7q-um-x0U" kind="show" id="zA7-ek-q4b"/>
                                 </connections>
                             </button>
@@ -353,25 +366,33 @@
                         <viewLayoutGuide key="safeArea" id="9TB-NM-tcH"/>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="dpm-YG-tz5" firstAttribute="trailing" secondItem="oyh-Fu-Axr" secondAttribute="trailing" id="6FB-SC-gOJ"/>
                             <constraint firstItem="9TB-NM-tcH" firstAttribute="trailing" secondItem="XUO-pi-aFj" secondAttribute="trailing" id="8C4-nt-M9B"/>
                             <constraint firstItem="oyh-Fu-Axr" firstAttribute="centerX" secondItem="noH-lg-b1T" secondAttribute="centerX" id="F0n-2P-pjB"/>
                             <constraint firstItem="XUO-pi-aFj" firstAttribute="leading" secondItem="9TB-NM-tcH" secondAttribute="leading" id="HQZ-rm-DRC"/>
                             <constraint firstItem="oyh-Fu-Axr" firstAttribute="leading" secondItem="9TB-NM-tcH" secondAttribute="leading" id="ITz-qz-Fm8"/>
                             <constraint firstItem="3x0-hv-8dz" firstAttribute="top" secondItem="9TB-NM-tcH" secondAttribute="top" id="MGU-TD-2sH"/>
+                            <constraint firstItem="dpm-YG-tz5" firstAttribute="leading" secondItem="oyh-Fu-Axr" secondAttribute="leading" id="QUG-jN-hdz"/>
                             <constraint firstItem="oyh-Fu-Axr" firstAttribute="centerY" secondItem="noH-lg-b1T" secondAttribute="centerY" constant="-150" id="Xx4-54-HNN"/>
                             <constraint firstItem="XUO-pi-aFj" firstAttribute="top" secondItem="oyh-Fu-Axr" secondAttribute="bottom" constant="100" id="ac1-ze-x31"/>
                             <constraint firstItem="oyh-Fu-Axr" firstAttribute="top" secondItem="3x0-hv-8dz" secondAttribute="bottom" id="b9r-4X-jb9"/>
                             <constraint firstItem="oyh-Fu-Axr" firstAttribute="top" secondItem="9TB-NM-tcH" secondAttribute="top" constant="100" id="cpa-8T-zbA"/>
+                            <constraint firstItem="dpm-YG-tz5" firstAttribute="top" secondItem="oyh-Fu-Axr" secondAttribute="top" id="eQj-yw-cx4"/>
                             <constraint firstItem="3x0-hv-8dz" firstAttribute="leading" secondItem="9TB-NM-tcH" secondAttribute="leading" constant="330" id="fTL-W5-MJk"/>
                             <constraint firstItem="9TB-NM-tcH" firstAttribute="trailing" secondItem="oyh-Fu-Axr" secondAttribute="trailing" id="ff6-84-huj"/>
                             <constraint firstItem="9TB-NM-tcH" firstAttribute="bottom" secondItem="XUO-pi-aFj" secondAttribute="bottom" id="syB-9c-FWo"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="zA7-3e-abC"/>
+                    <connections>
+                        <outlet property="playPauseButton" destination="1ZE-qu-hx9" id="Zj3-0h-k7W"/>
+                        <outlet property="timeLabel" destination="oyh-Fu-Axr" id="VDY-Fg-ueB"/>
+                        <outlet property="timerName" destination="dpm-YG-tz5" id="Lud-gA-oaP"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="d51-Vf-Hok" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-751" y="-439"/>
+            <point key="canvasLocation" x="-752.17391304347836" y="-439.28571428571428"/>
         </scene>
         <!--카운트다운세트-->
         <scene sceneID="b8L-dv-1SM">
@@ -451,11 +472,13 @@
                             </tableView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="J5I-vT-Yq1">
                                 <rect key="frame" x="0.0" y="693" width="414" height="100"/>
-                                <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="backgroundColor" systemColor="systemGray5Color"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="100" id="qHe-gc-0k0"/>
                                 </constraints>
-                                <state key="normal" title="타이머 추가"/>
+                                <state key="normal" title="타이머 추가">
+                                    <color key="titleColor" systemColor="systemRedColor"/>
+                                </state>
                                 <connections>
                                     <action selector="didTouchAddBtn:" destination="H7q-um-x0U" eventType="touchUpInside" id="4oD-OV-Fjs"/>
                                 </connections>
@@ -498,26 +521,26 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="타이머 명칭" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zqn-5Q-WRd">
-                                <rect key="frame" x="10" y="64" width="91" height="100"/>
+                                <rect key="frame" x="10" y="64" width="91" height="50"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="100" id="3fK-5Z-OAR"/>
+                                    <constraint firstAttribute="height" constant="50" id="3fK-5Z-OAR"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" textAlignment="natural" adjustsFontSizeToFit="NO" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DxS-km-MjF">
-                                <rect key="frame" x="111" y="64" width="293" height="100"/>
+                                <rect key="frame" x="111" y="64" width="293" height="50"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Atk-ve-jjQ">
-                                <rect key="frame" x="0.0" y="179" width="414" height="683"/>
+                                <rect key="frame" x="0.0" y="129" width="414" height="733"/>
                                 <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </pickerView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="oQe-zr-P0m"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" systemColor="systemGray5Color"/>
                         <constraints>
                             <constraint firstItem="DxS-km-MjF" firstAttribute="bottom" secondItem="Zqn-5Q-WRd" secondAttribute="bottom" id="1BM-xa-8NV"/>
                             <constraint firstItem="DxS-km-MjF" firstAttribute="top" secondItem="oQe-zr-P0m" secondAttribute="top" constant="20" id="3vR-cO-Tj3"/>
@@ -552,6 +575,9 @@
         <image name="timer.square" catalog="system" width="128" height="114"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGray5Color">
+            <color red="0.89803921568627454" green="0.89803921568627454" blue="0.91764705882352937" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemGreenColor">
             <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
